--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="stile.css">
 </head>
 <body>
-    <header>
+    <header class="cabecalho">
 <h1>melany</h1>
     </header>
 <img src="coelha.jpeg" alt="">
