--- a/index.html
+++ b/index.html
@@ -11,5 +11,12 @@
 <h1>melany</h1>
     </header>
 <img src="coelha.jpeg" alt="">
+<section> class="section1"
+ <h2><section 1</h2>
+</section>
+<section>class="section2"
+    <h3><section>2</h3>
+</section>
+
 </body>
 </html>
