--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header class="cabecalho">
 <h1>melany</h1>
-    </header>
-<img src="coelha.jpeg" alt="">
+    </header>cabecalho-imag
+<img class="em" src="coelha.jpeg" alt="">
 <section> class="section1"
  <h2><section 1</h2>
 </section>
